--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@ NEXT_PUBLIC_FIREBASE_DATABASE_URL=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_PUBLIC_API_KEY=
 
+GOOGLE_AUTH_CLIENT_ID=
+
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=
