--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-firebaseui": "^4.1.0"
+    "react-firebaseui": "^4.1.0",
+    "react-query": "^3.5.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
