--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@toast-ui/editor-plugin-code-syntax-highlight": "^1.0.0",
     "@toast-ui/react-editor": "^2.5.1",
+    "@types/classnames": "^2.2.11",
+    "classnames": "^2.2.6",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
     "highlight.js": "^10.5.0",
